<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/terminal_sessions">
        <menu>
            <item android:id="@+id/action_new_session" android:title="@string/terminal_new_session" />
            <item android:id="@+id/action_close_session" android:title="@string/terminal_close_session" />
            <item android:id="@+id/action_manager" android:title="@string/terminal_manager" />
        </menu>
    </item>

    <item android:title="@string/terminal_text_actions">
        <menu>
            <item android:id="@+id/action_paste" android:title="@android:string/paste" />
            <item android:id="@+id/action_copy_transcript" android:title="@string/terminal_copy_transcript" />
            <item android:id="@+id/action_share_transcript" android:title="@string/terminal_share_transcript" />
            <item android:id="@+id/action_clear" android:title="@string/terminal_clear_screen" />
        </menu>
    </item>

    <item android:title="@string/terminal_package_management">
        <menu>
            <item android:id="@+id/action_npm_init" android:title="@string/terminal_npm_init" />
            <item android:id="@+id/action_npm_install" android:title="@string/terminal_npm_install" />
            <item android:id="@+id/action_npm_install_package" android:title="@string/terminal_npm_install_package" />
            <item android:id="@+id/action_npm_run_script" android:title="@string/terminal_npm_run_script" />
            <item android:id="@+id/action_other_package_managers" android:title="@string/terminal_other_package_managers" />
            <item android:id="@+id/action_search_npm" android:title="@string/terminal_search_npm" />
        </menu>
    </item>

    <item android:title="@string/terminal_settings">
        <menu>
            <item android:id="@+id/action_text_size" android:title="@string/terminal_text_size" />
            <item android:id="@+id/action_npm_registry" android:title="@string/terminal_npm_registry" />
            <item
                android:id="@+id/action_npm_ignore_scripts"
                android:checkable="true"
                android:title="@string/terminal_npm_ignore_scripts" />
        </menu>
    </item>

    <item android:title="@string/terminal_help">
        <menu>
            <item android:id="@+id/action_tips" android:title="@string/terminal_tips" />
            <item android:id="@+id/action_node_probe" android:title="@string/terminal_node_probe" />
        </menu>
    </item>

    <item android:id="@+id/action_show_keyboard" android:title="@string/terminal_show_keyboard" />

</menu>
